--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.1",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "rsvp": "^3.3.3"
   },
   "keywords": [
     "ember-addon"
