--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "",
+  "repository": "https://github.com/achambers/ember-cli-nodetests",
   "engines": {
     "node": ">= 0.10.0"
   },
